<resources>
    <string name="app_name">淘点点</string>

    <!-- 标题 -->
    <string name="topbar_title_phone_register">手机号注册</string>
    <string name="topbar_title_reset_pwd">密码重置</string>
    <string name="topbar_title_setting">设置</string>
    <string name="topbar_title_my_data">资料</string>
    <string name="topbar_title_modify_data">修改资料</string>
    <string name="topbar_title_add_address">新增收货地址</string>
    <string name="topbar_title_modify_address">修改收货地址</string>
    <string name="topbar_title_address">地址管理</string>
    <string name="topbar_title_products">商品列表</string>

    <!-- Nav -->
    <string name="main_tab_name_home">首页</string>
    <string name="main_tab_name_category">分类</string>
    <string name="main_tab_name_circle">晒单</string>
    <string name="main_tab_name_my">我的</string>
    <string name="main_tab_name_cart">购物车</string>

    <!--登录专用-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_input_username_hint">手机号</string>
    <string name="login_input_username_hint_error">请输入正确的手机号&#8230;</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_username_error">用户名太长&#8230;</string>
    <string name="hint_password">密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="hint_username_ok">请输入正确的手机号码</string>
    <string name="user_hint_login">点击头像登录</string>
    <string name="reset_pwd_label">重置密码</string>
    <string name="retrieve_pwd_label">找回密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="login_success_hint">登录成功</string>
    <string name="send_sms_code_success_hint">已成功发送验证码</string>
    <string name="reset_success_hint">密码重置成功</string>
    <string name="register_success_hint">注册成功</string>
    <string name="share_hint">抱歉,您未安装该应用,不能分享&#8230;</string>
    <string name="login_hint">抱歉,您未安装该应用,不能登录&#8230;</string>
    <string name="login_wechat_hint">正在启动微信中&#8230;</string>
    <string name="login_tencent_hint">正在启动QQ中&#8230;</string>
    <string name="login_weibo_hint">正在启动微博中&#8230;</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>

    <!-- 用户中心 -->
    <string name="tab_name_pay">待付款</string>
    <string name="message">我的消息</string>
    <string name="setting">设置</string>
    <string name="address">收货地址</string>
    <string name="favorite">我的收藏</string>

    <!-- comment -->
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="commit">提交</string>
    <string name="modify">修改</string>

    <!-- Error View -->
    <string name="error_code">异常码：</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_address">获取收货地址中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>

    <string name="footer_type_loading">正在加载中…</string>
    <string name="footer_type_error">加载失败</string>
    <string name="footer_type_net_error">网络错误</string>

    <!-- state -->
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_load">正在加载…</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="state_submit">正在提交中&#8230;</string>

    <!-- 设置中心 -->
    <string name="clean_cache">清理缓存</string>
    <string name="update">检查更新</string>
    <string name="about" translatable="false">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="setting_exit">退出登录</string>
    <string name="logout_success_hint">退出登录成功</string>

    <!-- 收货地址 -->
    <string name="address_username_hint">收件人姓名</string>
    <string name="address_phone_hint">手机号码</string>
    <string name="address_area_hint">所在地区</string>
    <string name="address_detail_hint">街道、小区门牌等详细地址</string>
    <string name="topbar_title_product_list">商品列表</string>

    <!-- SKU -->
    <string name="comm_price_format">¥ %s</string>
    <string name="product_detail">商品详情</string>
    <string name="product_detail_sku_quantity">购买数量</string>
    <string name="product_detail_sku_confirm">确定</string>
    <string name="product_detail_sku_recommend_price">价格：¥%1$s/%2$s</string>
    <string name="product_detail_sku_stock">(库存:%1$s)</string>
    <string name="product_detail_sku_quantity_over">购买数量超出最大库存，请修改购买数量</string>
    <string name="product_detail_sku_quantity_empty">购买数量不能为空</string>
    <string name="product_detail_sku_add_succeed">商品添加成功，请前往进货单查看</string>
    <string name="comment_hint">评论</string>
    <string name="actionbar_title_my_data">我的资料</string>

</resources>
