<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.taotete.app.widget.TopBarView
        android:id="@+id/topbar"
        style="@style/MatchWrap" />

    <View style="@style/h_line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg"
        android:orientation="vertical"
        android:scrollbars="none"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:id="@+id/lay_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/h_line"
                android:layout_marginTop="20dip" />

            <LinearLayout
                android:id="@+id/rl_clean_cache"
                style="@style/option_item_rl"
                android:background="@drawable/ic_material"
                android:orientation="horizontal">

                <TextView
                    style="@style/option_item_text_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/clean_cache"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/infoTextColor"
                    android:textSize="@dimen/text_size_14"
                    tools:ignore="RelativeOverlap"
                    tools:text="13M" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <View
                    style="@style/h_line"
                    android:layout_marginLeft="@dimen/lay_14"
                    tools:ignore="RtlHardcoded" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/rl_feedback"
                style="@style/option_item_rl"
                android:background="@drawable/ic_material">

                <TextView
                    style="@style/option_item_text_parent"
                    android:text="@string/feedback"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_16" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <View
                    style="@style/h_line"
                    android:layout_marginLeft="@dimen/lay_14" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/rl_about"
                style="@style/option_item_rl"
                android:background="@drawable/ic_material">

                <TextView
                    style="@style/option_item_text_parent"
                    android:text="@string/about"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_16" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <View
                    style="@style/h_line"
                    android:layout_marginLeft="@dimen/lay_14" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/rl_check_version"
                style="@style/option_item_rl"
                android:background="@drawable/ic_material">

                <TextView
                    style="@style/option_item_text_parent"
                    android:text="@string/update"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_16" />
            </FrameLayout>

            <View style="@style/h_line" />

            <View
                android:id="@+id/setting_line_top"
                style="@style/h_line"
                android:layout_marginTop="20dp" />

            <FrameLayout
                android:id="@+id/fl_exit"
                style="@style/option_item_rl"
                android:background="@drawable/ic_material">

                <TextView
                    style="@style/option_item_text_parent"
                    android:text="@string/setting_exit"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_16" />
            </FrameLayout>

            <View
                android:id="@+id/setting_line_bottom"
                style="@style/h_line" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
