<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/lay_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <include
            android:id="@+id/ly_bar"
            layout="@layout/login_navigation_bar" />

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:paddingTop="48dp"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/ll_login_username"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_username_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_mobile" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/login_line_color" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/login_input_username_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_login_username_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_pwd_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_password" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/login_line_color" />

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_login_pwd_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_login_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_login_submit_lock"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/account_lock_font_color"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:gravity="center_vertical"
                android:text="@string/login_forget_hint"
                android:textColor="@color/login_input_active"
                tools:ignore="RtlHardcoded"/>

            <Space
                android:layout_width="32dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:gravity="center_vertical"
                android:text="新用户注册"
                android:textColor="@color/login_input_active"
                tools:ignore="RtlHardcoded"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>